# zephyr-ncs-buildsystem

./: .gitignore  BUILD_APP.md  LICENSE  NOTICE  README.md
app/: CMakeLists.txt  prj.conf
app/src/: main.c
docker/: .dockerignore  Dockerfile  Makefile  README.md  entrypoint.sh
src/common/greet/: greet.c  greet.h
tests/: CMakeLists.txt
tests/common/greet/: CMakeLists.txt  prj.conf
tests/common/greet/src/: test_greet.c
